--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "JAS-bot",
+    "name": "Sbot1",
     "version": "1.0.0",
     "description": "A discord support bot",
     "main": "bot.js",
